# symbiont-orga-demo

./: .audit-allowlist  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REPORT.md
.github/workflows/: ci.yml
agents/: README.md  task-agent.dsl  task-agent.symbi
crates/demo-karpathy-loop/: Cargo.toml
crates/demo-karpathy-loop/src/: delegator_executor.rs  executor.rs  knowledge.rs  lib.rs  ollama_provider.rs  openrouter_provider.rs  pre_validator.rs  provider.rs  reflector_executor.rs  task.rs
crates/demo-karpathy-loop/tests/: no_shell_out.rs
crates/symbi-escape-bench/: Cargo.toml
crates/symbi-escape-bench/src/: agent_loop.rs  main.rs  task.rs  trial.rs
crates/symbi-invis-strip/: Cargo.toml  README.md
crates/symbi-invis-strip/src/: lib.rs
crates/symbi-invis-strip/tests/: feature_gating_compile_fail.rs
crates/symbi-invis-strip/tests/compile-fail/: metrics_without_feature.rs  metrics_without_feature.stderr
crates/symbi-kloop-bench/: Cargo.toml
crates/symbi-kloop-bench/src/: dashboard.rs  db.rs  delegator.rs  harness.rs  main.rs  mock_scripts.rs  perf.rs  policy_gate.rs  pricing.rs  reflector.rs  report.rs  task_tools.rs  toolclad_fence.rs
crates/symbi-kloop-bench/tests/: typestate_compile_fail.rs
crates/symbi-kloop-bench/tests/compile-fail/: accessor_on_wrong_phase.rs  accessor_on_wrong_phase.stderr  builder_missing_provider.rs  builder_missing_provider.stderr  check_policy_on_dispatching.rs  check_policy_on_dispatching.stderr  observe_before_dispatch.rs  observe_before_dispatch.stderr  observe_on_reasoning.rs  observe_on_reasoning.stderr  phase_marker_forgery.rs  phase_marker_forgery.stderr  reuse_after_consumed.rs  reuse_after_consumed.stderr  skip_policy_check.rs  skip_policy_check.stderr
crates/symbi-toolclad-bridge/: Cargo.toml
crates/symbi-toolclad-bridge/src/: lib.rs
crates/symbi-toolclad-bridge/tests/: idn_probe.rs
delegator/: README.md  delegator.dsl  delegator.symbi
demo-output/: MODEL-SWEEP-REPORT-v10.md  MODEL-SWEEP-REPORT-v11.md  MODEL-SWEEP-REPORT-v12.md  MODEL-SWEEP-REPORT-v2.md  MODEL-SWEEP-REPORT-v3.md  MODEL-SWEEP-REPORT-v4.md  MODEL-SWEEP-REPORT-v6.md  MODEL-SWEEP-REPORT-v8.md  MODEL-SWEEP-REPORT-v9.md  MODEL-SWEEP-REPORT.md  reflector-quality-adv.json  reflector-quality-adv.txt  reflector-quality.json  reflector-quality.txt  v11-bite-rate-matrix.md  v11-summary.json  v12-ablation-matrix.md  v12-ablation-summary.json  v12-cross-impl-matrix.md  v12-cross-impl-summary.json  v9-perf-default-model.MOCK.json  v9-perf-default-modeltask.csv
demo-output/cloud-t4-20iter-20260418-223014/: report.md
demo-output/cloud-t4-20iter-20260418-223014/journals/: 20260419-052540-T4-n001-task.json  20260419-052546-T4-n001-reflect.json  20260419-052553-T4-n002-task.json  20260419-052602-T4-n002-reflect.json  20260419-052610-T4-n003-task.json  20260419-052616-T4-n003-reflect.json  20260419-052623-T4-n004-task.json  20260419-052629-T4-n004-reflect.json  20260419-052636-T4-n005-task.json  20260419-052641-T4-n005-reflect.json  20260419-052648-T4-n006-task.json  20260419-052652-T4-n006-reflect.json  20260419-052702-T4-n007-task.json  20260419-052707-T4-n007-reflect.json  20260419-052715-T4-n008-task.json  20260419-052720-T4-n008-reflect.json  20260419-052728-T4-n009-task.json  20260419-052733-T4-n009-reflect.json  20260419-052740-T4-n010-task.json  20260419-052745-T4-n010-reflect.json  20260419-052754-T4-n011-task.json  (+19 more)
demo-output/cloud-t4-adversarial-20260418-223202/: report.md
demo-output/history/: MODEL-SWEEP-REPORT-v5.md  MODEL-SWEEP-REPORT-v6.md  MODEL-SWEEP-REPORT-v7.md  REPORT-pre-v8.md
demo-output/v10/: cloud-perf.md
demo-output/v9/: all-adv-perf-model.md  all-perf-model.md  perf-deepseekv31-model.json  perf-deepseekv31-task.csv  perf-gemini25pro-model.json  perf-gemini25pro-task.csv  perf-gpt5-model.json  perf-gpt5-task.csv  perf-haiku45-model.json  perf-haiku45-task.csv  perf-minimax-m27-model.json  perf-minimax-m27-task.csv
evals/escape/: PUBLISHABILITY.md  README.md  prices.yaml  pyproject.toml  runner.py  sweep.py  sweep_config.yaml  sweep_config_n200.yaml  sweep_config_n200_sandboxed.yaml
evals/escape/analysis/: aggregate.py
evals/escape/detectors/: fs_detector.py  injection_detector.py  net_detector.py  state_detector.py  syscall_detector.py
evals/escape/harnesses/common/: llm_client.py  trial_record.py
evals/escape/harnesses/python_baseline/: __main__.py  harness.py  tools.py
evals/escape/harnesses/python_sandboxed/: Dockerfile
evals/escape/harnesses/symbiont/: run.sh
evals/escape/harnesses/symbiont/agents/: escape_agent.symbi
evals/escape/harnesses/symbiont/manifests/: answer.clad.toml  read_csv.clad.toml
evals/escape/harnesses/symbiont/policies/: fs_boundary.cedar
evals/escape/reports/: tier1-v2.md  tier1-v3.md  tier1-v4.md  tier1-v5.md  tier1.md  tier2-3.md
evals/escape/results/: README.md
evals/escape/schema/: task.schema.json  trial.schema.json
evals/escape/scripts/: redact_trials.py  refresh_prices.py  reprocess_sweep.py
evals/escape/tasks/: fs_boundary.yaml  fs_enumerate.yaml  injection_orchestrator.yaml  net_boundary.yaml  state_immutability.yaml  syscall_boundary.yaml
evals/escape/tests/: test_aggregate.py  test_attempt_detection.py  test_attempt_detection_dir_refs.py  test_canary_relocation.py  test_fs_detector.py  test_injection_detector.py  test_net_detector.py  test_python_harness.py  test_redact_trials.py  test_runner.py  test_state_detector.py  test_syscall_detector.py  test_trial_record.py
evals/escape/tests/fixtures/: strace_canary_etc.txt  strace_canary_secret.txt  strace_clean.txt
manifests/: store_knowledge.clad.toml  whois_lookup.clad.toml
policies/: README.md  delegator.cedar  reflector.cedar  task-agent.cedar
reflector/: README.md  reflector.dsl
scripts/: analyze-reflector-quality.py  analyze-v11-toolclad.py  audit-knowledge-stores.py  lint-cedar-policies.py  lint-dsl-files.py  run-demo.sh  run-openrouter-sweep.sh  run-t5-matrix.sh  v12-ablation-analyze.py  v12-cross-impl-conformance.py
tasks/: T1.json  T2.json  T3.json  T4.json  T5.json
(+7 files in other folders)
