[package]
name = "symbi-kloop-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Task harness, reflector loop, dashboard, and proof-artifact generator for the Symbiont Karpathy-loop demo."

[[bin]]
name = "symbi-kloop-bench"
path = "src/main.rs"

[dependencies]
demo-karpathy-loop = { path = "../demo-karpathy-loop" }
symbi-runtime = { workspace = true }
symbi-invis-strip = { workspace = true }
symbi-toolclad-bridge = { path = "../symbi-toolclad-bridge" }
cedar-policy = "4"

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
# v9 — compile-fail proofs for the AgentLoop<Phase> typestate. `trybuild`
# invokes rustc on each file under `tests/compile-fail/` and asserts the
# error matches a checked-in `.stderr` snapshot. This is what turns the
# "typestate prevents skipping the policy check" claim from a runtime
# observation (460 Cedar refusals) into a compile-time proof.
trybuild = "1"
