[project]
name = "symbiont-escape-evals"
version = "0.1.0"
description = "Escape-evaluation harness for Symbiont vs permissive Python"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "httpx>=0.27",
  "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["detectors*", "harnesses*", "analysis*"]
